      File->Open dialog.

    - Deleting a large amout of books from the library should be much
      faster now.

    - MComix now starts in RTL mode when a RTL language has been manually
      selected in the preference dialog.

    - Added an option to run arbitrary external commands on the currently
      opened file or archive. Commands can be edited from the "File->Open with"
      menu entry. The first item in this list can be accessed with the F8 key.

      The first argument to each command must be the absolute path to an
      executable, or an executable found in PATH. The 'Save' button is disabled
      until each command is at least syntactically valid.

    - Added an option to automatically rotate images if their height exceeds
      their width (or width exceeds height), located in the menu bar under
      Tools -> Transform image -> Auto-rotate image.

    - Added a new preference option to control sorting of files within
      archives. Natural sort order is the default ordering, which sorts
      numbers in file names based on their natural order (e.g. 1, 2, .., 10),
      while literal order will use standard C sorting (e.g. 1, 23, 4).

    - "Reset zoom" is now bound to CTRL-0 and KeyPad0 by default. Previously,
      CTRL-0 and CTRL-KeyPad0 were used.

    - Updated traditional Chinese translation (by Wayne Su).

    - Updated Hebrew translation (by Isratine Citizen).

    - Updated Japanese translation (by Toshiharu Kudoh).

    - Updated Spanish translation (by Carlos Feliu).

    - Updated simplified Chinese translation (by Zach Cheung).

    - Updated French translation (by Frédéric Chateaux).

MComix 0.99
Release date: 14.07.2012

    - Fixed "Go to page" dialog's thumbnail not scaling depending on dialog
      size.

    - Using the mouse wheel to scroll left now correctly advances to the
      next page in manga mode, instead of going back one page. Scrolling right
      has also been fixed.
